# jitaot

./: CMakeLists.txt  README.md  bytecode  ir.h  main.cpp  run.sh
include/analysis/: dfs.h  dominator_tree.h  loop_analyzer.h  rpo.h
include/ir/: basic_block.h  inst.h  ir_graph.h  opcode.h  value.h
src/: analysis.cpp  analysis.h  ir.h  main.cpp  parser.cpp  parser.h
tests/: graph_builders.h  test_dfs_rpo_idom.cpp  test_functions.h  test_loops.cpp
